--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.2",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "coveralls": "3.0.0",
