--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     ["transform-object-rest-spread", { "useBuiltIns": true }],
+    "transform-function-bind",
     "transform-class-properties"
   ]
 }
