--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "homepage": "https://github.com/jeroenptrs/react-stack-boilerplate#readme",
   "dependencies": {
+    "@cityofzion/neon-js": "^3.6.2",
     "antd": "3.4.0",
+    "axios": "^0.18.0",
     "babel-polyfill": "6.26.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
