--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-jss": "8.4.0",
+    "react-markdown": "^3.3.0",
     "react-test-renderer": "16.3.1"
   },
   "devDependencies": {
